--- a/frontend-wijmo/package.json
+++ b/frontend-wijmo/package.json
@@ -42,7 +42,8 @@
     "vue-cli-plugin-vuetify": "~2.4.7",
     "vue-loader": "^17.0.1",
     "vue-template-compiler": "^2.6.11",
-    "vuetify-loader": "^1.7.0"
+    "vuetify-loader": "^1.7.0",
+    "webpack": "^4.46.0"
   },
   "eslintConfig": {
     "root": true,
