--- a/sales/pom.xml
+++ b/sales/pom.xml
@@ -86,6 +86,23 @@
       <artifactId>spring-boot-starter-security</artifactId>
       <version>${spring-boot.version}</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.springframework.security.oauth</groupId>
+      <artifactId>spring-security-oauth2</artifactId>
+      <version>2.5.0.RELEASE</version>
+   </dependency>
+   
+   <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-jwt</artifactId>
+          <version>1.1.1.RELEASE</version>
+   </dependency>
+   <dependency>
+    <groupId>org.springframework.security</groupId>
+    <artifactId>spring-security-oauth2-jose</artifactId>
+    <version>5.5.0</version> <!-- Use the appropriate version here -->
+</dependency>
     <dependency>
       <groupId>io.jsonwebtoken</groupId>
       <artifactId>jjwt</artifactId>
@@ -96,6 +113,14 @@
       <artifactId>postgresql</artifactId>
       <scope>runtime</scope>
     </dependency>
+
+    <!-- For Maven -->
+		<dependency>
+      <groupId>org.keycloak</groupId>
+      <artifactId>keycloak-spring-boot-starter</artifactId>
+      <version>9.0.2</version>
+    </dependency>
+
   </dependencies>
   <dependencyManagement>
     <dependencies>
